--- a/index.html
+++ b/index.html
@@ -1,9 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<!-- JQUERY EINBINDUNG,tested -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+	<!-- CSS EINBINDUNG,tested -->
+	<link rel="stylesheet" type="text/css" href="style.css" media="screen" />
+
+	<!-- JAVASCRIPT EINBINDEN,tested  -->
+	<script language="javascript" type="text/javascript" src="javas.js"></script>.
+
+
 	<title></title>
 </head>
 <body>
+
+
+
+
+
+	<script type="text/javascript">
+
+
+
+	</script>
 
 </body>
 </html>
