--- a/index.html
+++ b/index.html
@@ -1,25 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<!-- JQUERY EINBINDUNG,tested -->
+	<!-- JQUERY EMBEDDING,tested -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-	<!-- CSS EINBINDUNG,tested -->
+	<!-- CSS EMBEDDING,tested -->
 	<link rel="stylesheet" type="text/css" href="style.css" media="screen" />
 
-	<!-- JAVASCRIPT EINBINDEN,tested  -->
+	<!-- JAVASCRIPT EMBEDDING,tested  -->
 	<script language="javascript" type="text/javascript" src="javas.js"></script>.
 
 
 	<title></title>
 </head>
 <body>
+	<h1>Erstelle deinen Helden</h1>
 
-
-
+	Your hero`s name <input type="text" name="name" id="heroName">
+	Your hero`s power <input type="number" name="power">
+	Your hero`s endurance <input type="number" name="endurance">
+	Your hero`s lives <input type="number" name="lives">
 
 
 	<script type="text/javascript">
+
+		
 
 
 
