Szene 2 Malle eingerichtet

--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
 	Your hero`s lives <input type="number" name="lives" id="heroLives">
 
 	<button onclick="test()"> Create </button>
-
+	<br>
+	<br>
+	<br>
+	<button> Go on  </button>
 
 	<script type="text/javascript">
 
