--- a/Neues Textdokument.html
+++ b/Neues Textdokument.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
 	<title></title>
 </head>
@@ -12,6 +13,7 @@
 	<br>
 	<button id="talk1Sc2"> Talk to them </button>
 	<br> 
+	<br> 
 	<button id="talk2Sc2"> Listen to their song </button>
 
 
@@ -20,10 +22,27 @@
 
 		document.getElementById("talk1Sc2").onclick= function () {
 				function talkin() {
-					alert("Ey Alda");	
+					alert("Yo Bro");	
 				};
 				return talkin();	
+				};
+
+
+
+		$("#talk2Sc2").click(function () {
+			var i = 7;
+			do {
+				alert(i +" beer in the closet");
+				i--;
+
+				if (i === 0) {
+					alert("No beer here anymore");
+					break;
 				}
+			}
+
+			while (i > -1);
+		});
 			
 
 	</script>
