Commit mit Übergang Szene 3

--- a/index.html
+++ b/index.html
@@ -114,7 +114,9 @@
 			// Wechsel SC2 zu Sc3 HIER WEITER !!!!
 			document.getElementById("walk1Sc2").onclick= function() {
 				if (x1 == 1 && y1 == 1) {
-					alert("Du hast alles durchgefuehrt");	
+
+					$("#allContent").html("<p>Hi</p>");
+		
 				}
 
 
