Übergang Szene 4 implementiert

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 							var randomNumber = Math.floor(Math.random() * (+max - +min)) + + min;
 							if ( randomNumber == choice) {
 								alert("Super passt alles!");
-								
+								Sc3Sc4();
 							}
 
 							else {
@@ -142,6 +142,20 @@
 			alert("Please create your hero");
 		}
 	}
+
+
+	// Launch Szene 4 mit einer Funktion
+
+	function Sc3Sc4 () {
+		// HIER KOMMT DIE SZENE 4 REIN
+		$("#allContent").html("      ")
+	
+
+
+
+	}
+
+
 
 
 
