Übergänge Szene 4 auf Szene 5 und 6 erfolgreich

--- a/Neues Textdokument.html
+++ b/Neues Textdokument.html
@@ -21,7 +21,15 @@
 		<button id="Sc4Sc6"> Gehe gleich weiter zum Gegner (wer braucht schon Training)
 		</button>
 
-	</div>	
+	</div>
+
+<!-- 	<div id='contentSc4'> <p> You get to a fork in the road and have to choose ....</p> <img src='ForkRoad.jpg'> <br><br> <button id='Sc4Sc5'> Gehe zum Traingsraum</button> <br><br> <button id='Sc4Sc6'> Gehe gleich weiter zum Gegner (wer braucht schon Training) </button> </div>
+ -->
+	
+
+
+
+
 
 
 		<script type="text/javascript">
