Sc6 HTML in gesamt Projekt integriert

--- a/Sc6opponent.html
+++ b/Sc6opponent.html
@@ -23,6 +23,15 @@
 	</div>
 
 
+	<div id='sc6container'>
+		<img src='opponent.jpg' id='Sc6opponent'>
+		<br>
+		<br>
+		<button id='sc6button1'> Fight!!!! </button>
+	</div>
+
+
+
 	<script type="text/javascript">
 		
 		var x = 7;
