--- a/index.html
+++ b/index.html
@@ -161,13 +161,9 @@
 				alert("Hallo1");			
 			}
 
-
-
 	function Sc4Sc6(){
-				alert("Hallo2");
-				// Hier kommt die 5.te Trainingsraumszene rein
+				document.getElementById("allContent").innerHTML="<div id='sc6container'> <img src='opponent.jpg' id='Sc6opponent'> <br> <br> <button id='sc6button1'> Fight!!!! </button> </div>";
 			}
-
 
 	</script>
 
