Erneute Implementierung Szene 5 HTML in Projekt

--- a/Sc5workoutRoom.html
+++ b/Sc5workoutRoom.html
@@ -12,6 +12,17 @@
 </head>
 <body>
 
+
+
+		<!-- <img src='workoutroom.jpg' id='workoutroom'> <img src='magican.jpg' id='magican'> <p>Now you can workout!! <span id='showpPoints'>You have 20 points to distribute </span></p> <button id='power'> Power </button> <br> <br> <button id='endurance'> Endurance</button> <br> <br> <button id='lives'> Yoga</button> -->
+
+
+
+
+
+
+
+
 	<div id="Sc4">
 		
 		<img src="workoutroom.jpg" id="workoutroom">
