--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 	
 	
 	function Sc4Sc5(){
-				alert("Hallo");			
+				document.getElementById("allContent").innerHTML="<div id='sc5container'> <img src='workoutroom.jpg' id='workoutroom'> <img src='magican.jpg' id='magican'> <p>Now you can workout!! <span id='showpPoints'>You have 20 points to distribute </span></p> <button id='power'> Power </button> <br> <br> <button id='endurance'> Endurance</button> <br> <br> <button id='lives'> Yoga</button> </div>";			
 			}
 
 	function Sc4Sc6(){
