--- a/index.html
+++ b/index.html
@@ -152,17 +152,64 @@
 		document.getElementById("allContent").innerHTML="	<div id='contentSc4'> <p> You get to a fork in the road and have to choose ....</p> <img src='ForkRoad.jpg'> <br><br> <button id='Sc4Sc5'> Gehe zum Traingsraum</button> <br><br> <button id='Sc4Sc6'> Gehe gleich weiter zum Gegner (wer braucht schon Training) </button> </div>"; document.getElementById("Sc4Sc5").onclick = function() {Sc4Sc5();} ; document.getElementById("Sc4Sc6").onclick=function () { Sc4Sc6();}
 		}
 
-	
+	// switch to scene 5 with workout function			
 
-	
-	
 	function Sc4Sc5(){
-				document.getElementById("allContent").innerHTML="<div id='sc5container'> <img src='workoutroom.jpg' id='workoutroom'> <img src='magican.jpg' id='magican'> <p>Now you can workout!! <span id='showpPoints'>You have 20 points to distribute </span></p> <button id='power'> Power </button> <br> <br> <button id='endurance'> Endurance</button> <br> <br> <button id='lives'> Yoga</button> </div>";			
-			}
+				document.getElementById("allContent").innerHTML="<div id='sc5container'> <img src='workoutroom.jpg' id='workoutroom'> <img src='magican.jpg' id='magican'> <p>Now you can workout!! <span id='showpPoints'>You have 20 points to distribute </span></p> <button id='power'> Power </button> <br> <br> <button id='endurance'> Endurance</button> <br> <br> <button id='lives'> Yoga</button> </div>"; var workoutPoints = 20;
+
+					// Scene5 function to increase power		 
+
+					$("#power").click(function() {if (workoutPoints>0) 
+						{
+						workoutPoints = workoutPoints-5; 
+						document.getElementById("showpPoints").innerHTML="You have " + workoutPoints + " points to distribute";
+						}
+						else { 
+						alert("you have already trained enough");
+						};
+					}
+			
+				);		
+			
+
+					// Scene5 function to increase endurance
+
+				$("#endurance").click(function() { 
+					if (workoutPoints>0) 
+					{
+					workoutPoints = workoutPoints-5; 
+					document.getElementById("showpPoints").innerHTML="You have " + workoutPoints + " points to distribute";
+					} else { 
+					alert("you have already trained enough");
+					}
+				}
+			);
+
+
+				// Scene5 function to increase lives
+			$("#lives").click(function() { 
+				if (workoutPoints>0) 
+					{
+						workoutPoints = workoutPoints-5; 
+						document.getElementById("showpPoints").innerHTML="You have " + workoutPoints + " points to distribute";
+					} else { 
+						alert("you have already trained enough");
+					}
+				}
+			);		
+			};
+
+
+	// ending scene 5
+
+
 
 	function Sc4Sc6(){
 				document.getElementById("allContent").innerHTML="<div id='sc6container'> <img src='opponent.jpg' id='Sc6opponent'> <br> <br> <button id='sc6button1'> Fight!!!! </button> </div>";
 			}
+
+
+		
 
 	</script>
 
